# glib-dbus-windows-service

./: client.c  glib-dbus-windows-service.sublime-project  meson.build  service.c  test-dbus-interface.xml
subprojects/: wing.wrap
